# ztm-clipstash

./: .pre-commit-config.yaml  Cargo.toml  README.md
migrations/: 20210624130929_initial.sql  20231124112449_api_key.sql
src/lib/: mod.rs
src/lib/data/: mod.rs  model.rs  query.rs
src/lib/domain/: maintenance.rs  time.rs
src/lib/domain/clip/: mod.rs
src/lib/domain/clip/field/: content.rs  expires.rs  hits.rs  mod.rs  password.rs  posted.rs  shortcode.rs  title.rs
src/lib/service/: action.rs  ask.rs  mod.rs
src/lib/web/: api.rs  ctx.rs  form.rs  hitcounter.rs  http.rs  mod.rs  renderer.rs
static/: clipstash.css
templates/: base.hbs  footer.hbs  header.hbs
