[package]
name = "clipstash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
chrono = {version = "0.4", features = ["serde"]}
uuid = {version = "1.5", features = ["serde", "v4"]}
derive_more = "0.99"
rand = "0.8"
sqlx = {version = "0.7", features = [
    "sqlite", # the database driver, sqlite is the simplest RDB - stores all data in a single file and is easy to set up
    "runtime-tokio-rustls", # async connection
    "macros", # check the database at compile time to make sure the DB queries are valid
    "chrono", # convert to and from datetime types
    "uuid", # convert to and from `uuid` crate types into db entities
]}
handlebars = {version = "4.3", features = ["dir_source"]}
rocket = {version = "0.5.0-rc.1", features = ["json"]}
structopt = "0.3"
dotenv = "0.15"
tokio = "1.34"
